<resources>
    <string name="app_name">MCAO</string>
    <string name="action_settings">Settings</string>




    <!-- STRING DAS ABAS -->
    <string name="titulo_aba_carteira">CARTEIRA</string>
    <string name="titulo_aba_cota">COTA</string>
    <string name="titulo_aba_fechanento">FECHAMENTO</string>
    <string name="linear_layout_manager">Linear Layout</string>
    <string name="grid_layout_manager">Grid Layout</string>
    <string name="element_text">codigo</string>
    <string name="codigo_acao">Código</string>
    <string name="data_operacao">Data:</string>
    <string name="quantidade">Quantidade:</string>
    <string name="btn_operacao_salvar">SALVAR</string>
    <string name="btn_cancelar">CANCELAR</string>
    <string name="qtde_operacao">Quantidade</string>
    <string name="valor_liquido">Valor Líquido</string>
    <string name="valor_taxas">Taxas</string>
    <string name="valor_cotacao">Cotação</string>
    <string name="param_qtde_operacao">qtde_operacao</string>
</resources>
