<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    style="@style/AppTheme.Mcao.DialogOperacao">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="VENDA"
        android:textColor="#000"/>
    <TextView
        android:id="@+id/cmp_codigo_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="2dp"
        android:text="@string/codigo_acao"
        android:hint="@string/codigo_acao"
        style="@style/AppTheme.Mcao.DialogOperacao.TextView"/>
    <TextView
        style="@style/AppTheme.Mcao.DialogOperacao.TextView"
        android:id="@+id/cmp_codigo_value"
        android:inputType="textCapCharacters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/codigo_acao"/>
    <TextView
        android:id="@+id/cmp_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="2dp"
        android:text="@string/data_operacao"
        android:hint="@string/data_operacao"
        style="@style/AppTheme.Mcao.DialogOperacao.TextView"/>
    <EditText
        style="@style/AppTheme.Mcao.DialogOperacao.EditText"
        android:id="@+id/cmp_data_value"
        android:inputType="date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/data_operacao"/>
    <TextView
        android:id="@+id/cmp_qtde"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="2dp"
        android:text="@string/qtde_operacao"
        android:hint="@string/qtde_operacao"
        style="@style/AppTheme.Mcao.DialogOperacao.TextView"/>
    <EditText
        style="@style/AppTheme.Mcao.DialogOperacao.EditText"
        android:id="@+id/cmp_qtde_value"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/qtde_operacao"/>

    <TextView
        android:id="@+id/cmp_cotacao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="2dp"
        android:text="@string/valor_cotacao"
        android:hint="@string/valor_cotacao"
        style="@style/AppTheme.Mcao.DialogOperacao.TextView"/>
    <EditText
        style="@style/AppTheme.Mcao.DialogOperacao.EditText"
        android:id="@+id/cmp_cotacao_value"
        android:inputType="numberDecimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/valor_cotacao"/>

    <TextView
        android:id="@+id/cmp_valor_taxas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="2dp"
        android:text="@string/valor_taxas"
        android:hint="@string/valor_taxas"
        style="@style/AppTheme.Mcao.DialogOperacao.TextView"/>
    <EditText
        style="@style/AppTheme.Mcao.DialogOperacao.EditText"
        android:id="@+id/cmp_valor_taxas_value"
        android:inputType="numberDecimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/valor_taxas"/>
</LinearLayout>